--- a/milena.html
+++ b/milena.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang= *pt-br*>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +10,6 @@
    <header class="cabecalho">
     <h1>TITULO TESTE</h1>
 </header> 
-<img src=">"
-</body>
-</html>
+<img class="imagem" src="">
+<ul class="lista">
+    <li>escola</li>
